--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react-native": "~0.66.13",
+    "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "~4.3.5"
   },
   "resolutions": {
